[project]
name = "optimal-craft-finder"
version = "0.1.0"
description = "A tool for finding optimal crafting strategies in Hypixel Skyblock by analyzing item data and bazaar prices through the Hypixel API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
